objects/CRM_Borrowing_Power_Living_Expense__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Couple_Base__c</fullName>
        <label>Couple Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Couple_Increment__c</fullName>
        <label>Couple Increment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Dependant_Base__c</fullName>
        <label>Dependant Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Dependant_Increment__c</fullName>
        <label>Dependant Increment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Lower_Threshold__c</fullName>
        <label>Lower Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Single_Adult_Base__c</fullName>
        <label>Single Adult Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Single_Adult_Increment__c</fullName>
        <label>Single Adult Increment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Borrowing Power Living Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Single_Adult_Base__c</columns>
        <columns>CRM_Single_Adult_Increment__c</columns>
        <columns>CRM_Couple_Base__c</columns>
        <columns>CRM_Couple_Increment__c</columns>
        <columns>CRM_Dependant_Base__c</columns>
        <columns>CRM_Dependant_Increment__c</columns>
        <columns>CRM_Lower_Threshold__c</columns>
        <columns>CRM_Start_Date__c</columns>
        <columns>CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPLE-{0000}</displayFormat>
        <label>Borrowing Power Living Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowing Power Living Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>